# mcp-ssh-ops

./: .gitignore  AGENTS.md  LICENSE  README.md  commands.yaml  config.example.yaml  hosts.example.yaml  pyproject.toml  server.py
src/mcp_ssh_ops/: __init__.py  commands.py  host_memory.py  recap.py  server.py  ssh_client.py
tests/: test_pipeline.py
